# ArchTest

./: CMakeLists.txt  main.cpp  makefile
glad/include/glad/: glad.h
glad/src/: glad.c
